Removing Repo change to prepare for Angular update

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-registry=https://pkgs.dev.azure.com/trecapps/TrecAppsDev1/_packaging/tcNpmRepo/npm/registry/ 
+# registry=https://pkgs.dev.azure.com/trecapps/TrecAppsDev1/_packaging/tcNpmRepo/npm/registry/ 
                         
-always-auth=true
+# always-auth=true
