Set scoped repository

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
-# registry=https://pkgs.dev.azure.com/trecapps/TrecAppsDev1/_packaging/tcNpmRepo/npm/registry/ 
-                        
-# always-auth=true
+@tc:registry=https://pkgs.dev.azure.com/trecapps/TrecAppsDev1/_packaging/tcNpmRepo/npm/registry/                      
+@tc:always-auth=true
